--- a/credit_risk_resampling_code.ipynb
+++ b/credit_risk_resampling_code.ipynb
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -742,19 +742,28 @@
        "Counter({'loan_status': 1})"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from imblearn.over_sampling import RandomOverSampler\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import balanced_accuracy_score\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from imblearn.metrics import classification_report_imbalanced\n",
+    "\n",
     "# Resample the training data with the RandomOversampler\n",
-    "# YOUR CODE HERE"
+    "ros = RandomOverSampler(random_state = 1)\n",
+    "X_ros_resampled, y_ros_resampled = ros.fit_resample(X_train, y_train)\n",
+    "\n",
+    "Counter(y_ros_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -763,62 +772,64 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "model_ros = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "model_ros.fit(X_ros_resampled, y_ros_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.646602844334948"
+       "0.640324421824783"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "y_ros_pred = model_ros.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_ros_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  75,   26],\n",
-       "       [7686, 9418]])"
+       "array([[   67,    34],\n",
+       "       [ 6546, 10558]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "confusion_matrix(y_test, y_ros_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -827,17 +838,17 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.74      0.55      0.02      0.64      0.42       101\n",
-      "   low_risk       1.00      0.55      0.74      0.71      0.64      0.40     17104\n",
+      "  high_risk       0.01      0.66      0.62      0.02      0.64      0.41       101\n",
+      "   low_risk       1.00      0.62      0.66      0.76      0.64      0.41     17104\n",
       "\n",
-      "avg / total       0.99      0.55      0.74      0.71      0.64      0.40     17205\n",
+      "avg / total       0.99      0.62      0.66      0.76      0.64      0.41     17205\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(classification_report_imbalanced(y_test, y_ros_pred))"
    ]
   },
   {
