--- a/credit_risk_resampling_code.ipynb
+++ b/credit_risk_resampling_code.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "[5 rows x 86 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,7 @@
        "[8 rows x 95 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
        "((51612, 95), (51612, 1))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +742,7 @@
        "Counter({'loan_status': 1})"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +794,7 @@
        "0.640324421824783"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
        "       [ 6546, 10558]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -875,8 +875,10 @@
     }
    ],
    "source": [
+    "from imblearn.over_sampling import SMOTE\n",
     "# Resample the training data with SMOTE\n",
-    "# YOUR CODE HERE"
+    "X_os_resampled, y_os_resampled = SMOTE(random_state=1, sampling_strategy='auto').fit_resample(X_train, y_train)\n",
+    "Counter(y_os_resampled)"
    ]
   },
   {
@@ -897,7 +899,8 @@
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "model_os = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "model_os.fit(X_os_resampled, y_os_resampled)"
    ]
   },
   {
@@ -908,7 +911,7 @@
     {
      "data": {
       "text/plain": [
-       "0.662394124702461"
+       "0.6514992150524688"
       ]
      },
      "execution_count": 16,
@@ -918,7 +921,8 @@
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "y_os_pred = model_os.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_os_pred)"
    ]
   },
   {
@@ -929,8 +933,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[   64,    37],\n",
-       "       [ 5283, 11821]])"
+       "array([[   62,    39],\n",
+       "       [ 5317, 11787]])"
       ]
      },
      "execution_count": 17,
@@ -940,7 +944,7 @@
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "confusion_matrix(y_test, y_os_pred)"
    ]
   },
   {
@@ -954,17 +958,17 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.63      0.69      0.02      0.66      0.44       101\n",
-      "   low_risk       1.00      0.69      0.63      0.82      0.66      0.44     17104\n",
+      "  high_risk       0.01      0.61      0.69      0.02      0.65      0.42       101\n",
+      "   low_risk       1.00      0.69      0.61      0.81      0.65      0.43     17104\n",
       "\n",
-      "avg / total       0.99      0.69      0.63      0.81      0.66      0.44     17205\n",
+      "avg / total       0.99      0.69      0.61      0.81      0.65      0.43     17205\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(classification_report_imbalanced(y_test, y_os_pred))"
    ]
   },
   {
