--- a/credit_risk_ensemble.ipynb
+++ b/credit_risk_ensemble.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -290,14 +290,14 @@
        "[5 rows x 86 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load the data\n",
-    "file_path = Path('LoanStats_2019Q1.csv.zip')\n",
+    "file_path = Path('Resources/LoanStats_2019Q1.csv')\n",
     "df = pd.read_csv(file_path, skiprows=1)[:-2]\n",
     "df = df.loc[:, columns].copy()\n",
     "\n",
@@ -337,20 +337,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create our features\n",
-    "X = # YOUR CODE HERE\n",
+    "X = pd.get_dummies(df.drop(columns = ['loan_status']))\n",
     "\n",
     "# Create our target\n",
-    "y = # YOUR CODE HERE"
+    "y = pd.DataFrame(df['loan_status'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
        "[8 rows x 95 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,12 +693,414 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>loan_amnt</th>\n",
+       "      <th>int_rate</th>\n",
+       "      <th>installment</th>\n",
+       "      <th>annual_inc</th>\n",
+       "      <th>dti</th>\n",
+       "      <th>delinq_2yrs</th>\n",
+       "      <th>inq_last_6mths</th>\n",
+       "      <th>open_acc</th>\n",
+       "      <th>pub_rec</th>\n",
+       "      <th>revol_bal</th>\n",
+       "      <th>...</th>\n",
+       "      <th>issue_d_Mar-2019</th>\n",
+       "      <th>pymnt_plan_n</th>\n",
+       "      <th>initial_list_status_f</th>\n",
+       "      <th>initial_list_status_w</th>\n",
+       "      <th>next_pymnt_d_Apr-2019</th>\n",
+       "      <th>next_pymnt_d_May-2019</th>\n",
+       "      <th>application_type_Individual</th>\n",
+       "      <th>application_type_Joint App</th>\n",
+       "      <th>hardship_flag_N</th>\n",
+       "      <th>debt_settlement_flag_N</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3903</th>\n",
+       "      <td>1600.0</td>\n",
+       "      <td>0.0881</td>\n",
+       "      <td>50.74</td>\n",
+       "      <td>35964.0</td>\n",
+       "      <td>24.12</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1156.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28390</th>\n",
+       "      <td>9000.0</td>\n",
+       "      <td>0.0756</td>\n",
+       "      <td>280.21</td>\n",
+       "      <td>41000.0</td>\n",
+       "      <td>16.89</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11157.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15470</th>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>0.1033</td>\n",
+       "      <td>214.10</td>\n",
+       "      <td>112000.0</td>\n",
+       "      <td>17.75</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>16904.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4279</th>\n",
+       "      <td>36000.0</td>\n",
+       "      <td>0.1033</td>\n",
+       "      <td>1167.21</td>\n",
+       "      <td>120000.0</td>\n",
+       "      <td>19.95</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>63248.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57514</th>\n",
+       "      <td>18000.0</td>\n",
+       "      <td>0.0881</td>\n",
+       "      <td>570.81</td>\n",
+       "      <td>51000.0</td>\n",
+       "      <td>19.11</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>17586.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49100</th>\n",
+       "      <td>8400.0</td>\n",
+       "      <td>0.0646</td>\n",
+       "      <td>257.30</td>\n",
+       "      <td>37992.0</td>\n",
+       "      <td>33.16</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7316.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20609</th>\n",
+       "      <td>30000.0</td>\n",
+       "      <td>0.0646</td>\n",
+       "      <td>918.93</td>\n",
+       "      <td>217000.0</td>\n",
+       "      <td>19.56</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>142377.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21440</th>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>0.1180</td>\n",
+       "      <td>442.88</td>\n",
+       "      <td>35000.0</td>\n",
+       "      <td>16.19</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>273.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50057</th>\n",
+       "      <td>11625.0</td>\n",
+       "      <td>0.1447</td>\n",
+       "      <td>273.34</td>\n",
+       "      <td>30000.0</td>\n",
+       "      <td>18.96</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8237.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5192</th>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>0.1033</td>\n",
+       "      <td>428.20</td>\n",
+       "      <td>60000.0</td>\n",
+       "      <td>59.56</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>49907.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>51612 rows × 95 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       loan_amnt  int_rate  installment  annual_inc    dti  delinq_2yrs  \\\n",
+       "3903      1600.0    0.0881        50.74     35964.0  24.12          0.0   \n",
+       "28390     9000.0    0.0756       280.21     41000.0  16.89          1.0   \n",
+       "15470    10000.0    0.1033       214.10    112000.0  17.75          0.0   \n",
+       "4279     36000.0    0.1033      1167.21    120000.0  19.95          0.0   \n",
+       "57514    18000.0    0.0881       570.81     51000.0  19.11          1.0   \n",
+       "...          ...       ...          ...         ...    ...          ...   \n",
+       "49100     8400.0    0.0646       257.30     37992.0  33.16          0.0   \n",
+       "20609    30000.0    0.0646       918.93    217000.0  19.56          0.0   \n",
+       "21440    20000.0    0.1180       442.88     35000.0  16.19          0.0   \n",
+       "50057    11625.0    0.1447       273.34     30000.0  18.96          0.0   \n",
+       "5192     20000.0    0.1033       428.20     60000.0  59.56          0.0   \n",
+       "\n",
+       "       inq_last_6mths  open_acc  pub_rec  revol_bal  ...  issue_d_Mar-2019  \\\n",
+       "3903              0.0      20.0      0.0     1156.0  ...                 1   \n",
+       "28390             0.0      16.0      0.0    11157.0  ...                 0   \n",
+       "15470             0.0      14.0      0.0    16904.0  ...                 0   \n",
+       "4279              1.0      13.0      0.0    63248.0  ...                 1   \n",
+       "57514             0.0      16.0      0.0    17586.0  ...                 0   \n",
+       "...               ...       ...      ...        ...  ...               ...   \n",
+       "49100             0.0       9.0      0.0     7316.0  ...                 0   \n",
+       "20609             2.0      25.0      0.0   142377.0  ...                 0   \n",
+       "21440             0.0       6.0      0.0      273.0  ...                 0   \n",
+       "50057             2.0      10.0      0.0     8237.0  ...                 0   \n",
+       "5192              0.0      15.0      0.0    49907.0  ...                 1   \n",
+       "\n",
+       "       pymnt_plan_n  initial_list_status_f  initial_list_status_w  \\\n",
+       "3903              1                      1                      0   \n",
+       "28390             1                      0                      1   \n",
+       "15470             1                      0                      1   \n",
+       "4279              1                      0                      1   \n",
+       "57514             1                      0                      1   \n",
+       "...             ...                    ...                    ...   \n",
+       "49100             1                      0                      1   \n",
+       "20609             1                      0                      1   \n",
+       "21440             1                      0                      1   \n",
+       "50057             1                      0                      1   \n",
+       "5192              1                      0                      1   \n",
+       "\n",
+       "       next_pymnt_d_Apr-2019  next_pymnt_d_May-2019  \\\n",
+       "3903                       0                      1   \n",
+       "28390                      0                      1   \n",
+       "15470                      0                      1   \n",
+       "4279                       0                      1   \n",
+       "57514                      0                      1   \n",
+       "...                      ...                    ...   \n",
+       "49100                      1                      0   \n",
+       "20609                      1                      0   \n",
+       "21440                      1                      0   \n",
+       "50057                      1                      0   \n",
+       "5192                       0                      1   \n",
+       "\n",
+       "       application_type_Individual  application_type_Joint App  \\\n",
+       "3903                             1                           0   \n",
+       "28390                            1                           0   \n",
+       "15470                            1                           0   \n",
+       "4279                             1                           0   \n",
+       "57514                            1                           0   \n",
+       "...                            ...                         ...   \n",
+       "49100                            1                           0   \n",
+       "20609                            1                           0   \n",
+       "21440                            0                           1   \n",
+       "50057                            1                           0   \n",
+       "5192                             0                           1   \n",
+       "\n",
+       "       hardship_flag_N  debt_settlement_flag_N  \n",
+       "3903                 1                       1  \n",
+       "28390                1                       1  \n",
+       "15470                1                       1  \n",
+       "4279                 1                       1  \n",
+       "57514                1                       1  \n",
+       "...                ...                     ...  \n",
+       "49100                1                       1  \n",
+       "20609                1                       1  \n",
+       "21440                1                       1  \n",
+       "50057                1                       1  \n",
+       "5192                 1                       1  \n",
+       "\n",
+       "[51612 rows x 95 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "# YOUR CODE HERE"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1)\n",
+    "X_train"
    ]
   },
   {
@@ -1044,7 +1446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
